Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "answers": [
+      {
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "correct": true
+      },
+      {
+        "text": "Không có ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cựu trưởng ban quản trị chung cư Miếu Nổi gây thiệt hại 637 triệu đồng, tham ô 2,5 tỉ đồng",
     "content": "Ông Phạm Phương, cựu trưởng ban quản trị chung cư Miếu Nổi, cùng các đồng phạm đã gây thiệt hại cho cư dân hơn 637 triệu đồng và tham ô gần 2,5 tỉ đồng. Cơ quan điều tra xác định họ đã lợi dụng chức vụ để thực hiện các hành vi tham ô tài sản như ký hợp đồng thi công không đúng quy định và sử dụng tiền đóng góp của cư dân cho mục đích cá nhân. Vụ việc đã gây ra nhiều hệ lụy cho người dân sống tại chung cư này.",
     "link": "https://tuoitre.vn/cuu-truong-ban-quan-tri-chung-cu-mieu-noi-gay-thiet-hai-637-trieu-dong-tham-o-2-5-ti-dong-20250324190035108.htm",
@@ -577,60 +635,6 @@
     ]
   },
   {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
-    "answers": [
-      {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
-        "correct": true
-      },
-      {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
-        "correct": false
-      },
-      {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
-        "correct": false
-      },
-      {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -684,6 +688,60 @@
       },
       {
         "text": "Uống trà sữa giúp tăng cường chức năng thận.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
         "correct": false
       }
     ]
@@ -4209,60 +4267,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
     "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
     "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
@@ -4316,6 +4320,60 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -4464,6 +4522,33 @@
     ]
   },
   {
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "answers": [
+      {
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "correct": true
+      },
+      {
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào đáng kể",
+        "correct": false
+      },
+      {
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -4513,33 +4598,6 @@
       },
       {
         "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
-    "answers": [
-      {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
-        "correct": true
-      },
-      {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể",
-        "correct": false
-      },
-      {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
