Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,32 +81,28 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
-    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
-    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
-    "cat": "suc-khoe",
+    "title": "Lối mòn nghiệt ngã của người mẹ 2 lần bước vào trại cai nghiện ma túy",
+    "content": "Trần Thị Trà, một người mẹ trẻ 24 tuổi, đã trải qua hai lần cai nghiện ma túy. Cuộc sống của cô bắt đầu trượt dài sau khi thử ma túy trong một lần tìm kiếm niềm vui, dẫn đến hôn nhân tan vỡ và con cái bơ vơ. Sau khi hoàn thành đợt cai nghiện đầu tiên, Trà đã trở lại với ma túy và phải tiếp tục tìm cách vượt qua cơn ghiền. Cô hiện đang quyết tâm làm lại cuộc đời với sự hỗ trợ từ gia đình và cơ sở cai nghiện.",
+    "link": "https://tuoitre.vn/loi-mon-nghiet-nga-cua-nguoi-me-2-lan-buoc-vao-trai-cai-nghien-ma-tuy-20250324164510832.htm",
+    "cat": "gia-dinh",
     "positivity": 4,
-    "importance": 9,
-    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "importance": 7,
+    "question": "Tại sao Trần Thị Trà phải vào trại cai nghiện ma túy lần thứ hai?",
     "answers": [
       {
-        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "text": "Cô không thể từ bỏ ma túy sau khi tái hòa nhập cộng đồng.",
         "correct": true
       },
       {
-        "text": "Không có ảnh hưởng gì.",
+        "text": "Cô bị ép vào trại cai nghiện bởi gia đình.",
         "correct": false
       },
       {
-        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "text": "Cô muốn tìm việc làm mới.",
         "correct": false
       },
       {
-        "text": "Làm tăng cường sức khỏe cho trẻ.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "text": "Cô gặp khó khăn trong cuộc sống gia đình.",
         "correct": false
       }
     ]
@@ -134,6 +130,37 @@
       },
       {
         "text": "Đỏ và lỏng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "answers": [
+      {
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "correct": true
+      },
+      {
+        "text": "Không có ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
         "correct": false
       }
     ]
@@ -2956,60 +2983,6 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
-    "answers": [
-      {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
-        "correct": true
-      },
-      {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -3063,6 +3036,60 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "answers": [
+      {
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "correct": true
+      },
+      {
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "correct": false
+      },
+      {
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -4200,33 +4227,6 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -4280,6 +4280,33 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
